fix: 🐛 move dark mode modal override to a mixin

--- a/addons/rose/addon/styles/hds/overrides.scss
+++ b/addons/rose/addon/styles/hds/overrides.scss
@@ -70,31 +70,3 @@ form {
     }
   }
 }
-
-.ember-application.rose-theme-dark {
-  // override for HDS dialog overlay to keep darker overlay
-  .hds-dialog-primitive__overlay {
-    background-color: var(--token-color-palette-neutral-0);
-  }
-
-  // override for HDS modal to remove high contrast shadow and set border
-  .hds-modal {
-    border: 1px solid var(--token-color-border-strong);
-    box-shadow: none;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .ember-application:not(.rose-theme-light) {
-    // override for HDS dialog overlay to keep darker overlay
-    .hds-dialog-primitive__overlay {
-      background-color: var(--token-color-palette-neutral-0);
-    }
-
-    // override for HDS modal to remove high contrast shadow and set border
-    .hds-modal {
-      border: 1px solid var(--token-color-border-strong);
-      box-shadow: none;
-    }
-  }
-}
